# reg_op_compress

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: ci-cmake-tests.yml
cmake/: settings.cmake  tests.cmake
include/: reg_op_compress.hpp
tests/: CMakeLists.txt  test_reg_op_compress.cpp
